fixed calculator jumping when showing detail

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -18,8 +18,6 @@ body {
     padding: 0 20px;
     margin: 0 auto;
     min-height: 100vh;
-    display: flex;
-    align-items: center;
 
     @media (max-width: 375px) {
         padding: 0 10px;
