--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     gap: 10px;
     padding: 20px;
-    margin-top: 30px;
+    padding-top: 100px;
     background-color: $accent-color;
     border-radius: 5px;
     max-width: 500px;
